Changes
=======

2.5.9 (2011-02-15)
------------------

* Nothing changed yet.


2.5.9 (15/02/2011)
------------------

* fix UnboundLocalError: local variable 'o' referenced before assignment, which come with the try except to cache image handling errors
  [derstappenit]


2.5.8 (14/02/2011)
------------------

* fix optional use of fmp
  [derstappenit]
  
* only add default_template if doesnt exists, this fix error in archetypes_tool on update schema
  [derstappenit]
  
* add a BooleanField sendToAllPloneMembers, which can be used to address all existing plone members in a newsletter, no need to select all every time new user are available 
  [derstappenit]

* fix url handlink for links and images if url contains empty spaces, add z3 resource image support, add images only to html part of the email
  [derstappenit]

* cache exception if broken img tags exist that can't be resolved by restrictedTraverse, but log the error
  [derstappenit]

2.5.7 (08/02/2011)
------------------

* Do not encode email addresses when exporting subscribers.
  [timo]

* Make sure the url variable is always set in the handle_starttag method of 
  the ENLHTMLParser.
  [timo]

* Fix CSV import with special characters.
  [timo]
  
* Do not create a persistent file when exporting CSV data, use a temp file
  instead.
  [timo]
  
* Fix CSV export with special characters.
  [timo]
  
* Added missing methods for HTML parser in order to preserve HTML references and other stuff.
  [dgherman]


2.5.6 (27/01/2011)
------------------

* Create new Sphinx-based documentation.
  [timo]
  
* Move CSV file format description to the top.
  [timo]
  
* CSV export added.
  [timo]
  
* Use TextAreaWidget for the newsletter template body.
  [timo]
  
* Fix/refactor/rewrite CSV import.
  [timo]

* Fix CSV-Import format description.
  [timo]

* Link to subscriber import added.
  [timo]


2.5.5 (26/01/2011)
------------------

* remove unneeded dependency to BeautifulSoup
  [derstappenit]


2.5.4 (11/01/2011)