@@ -320,7 +320,6 @@ class EasyNewsletter(ATTopic, BaseFolder):
         if not getattr(self, 'default_template', None):
             self.manage_addProduct["EasyNewsletter"].addENLTemplate(id="default_template", title="Default")
         tmpl = self.default_template
-        self.setExcludeFromNav(False)
 
     security.declarePublic("displayContentsTab")
     def displayContentsTab(self):
