@@ -22,8 +22,12 @@ eggs +=
     repoze.sphinx.autointerface
     Products.PdbDebugMode
     Products.PrintingMailHost
+    iw.debug
     plone.reload
+    Products.MaildropHost
 
+zcml +=
+    iw.debug
 
 [versions]
 Sphinx = 0.6.6
@@ -61,7 +65,7 @@ mode = 755
 
 [test]
 recipe = collective.xmltestreport
-eggs = ${buildout:package-name}
+eggs = ${buildout:package-name} [test]
 defaults = ['--auto-color', '--auto-progress']
 
 
